--- a/bench-express.html
+++ b/bench-express.html
@@ -2,5 +2,5 @@
   <style>body{font:14px system-ui,Segoe UI,Arial} table{border-collapse:collapse} td,th{border:1px solid #ddd;padding:6px}</style>
   <h2>Bench Report</h2>
   <table><tbody>
-  <tr><th>mode</th><td>sweep</td></tr><tr><th>baseURL</th><td>http://localhost:8081</td></tr><tr><th>path</th><td>/api/chat/completions</td></tr><tr><th>total</th><td>64.00</td></tr><tr><th>concurrency</th><td>8.00</td></tr><tr><th>wall</th><td>24990.28</td></tr><tr><th>rps</th><td>2.56</td></tr><tr><th>tps</th><td>16390.37</td></tr><tr><th>ttft_p50</th><td>1.97</td></tr><tr><th>ttft_p95</th><td>43.23</td></tr><tr><th>dur_p50</th><td>3115.12</td></tr><tr><th>dur_p95</th><td>3168.92</td></tr>
+  <tr><th>mode</th><td>sweep</td></tr><tr><th>baseURL</th><td>http://localhost:8081</td></tr><tr><th>path</th><td>/api/chat/completions</td></tr><tr><th>total</th><td>128.00</td></tr><tr><th>concurrency</th><td>32.00</td></tr><tr><th>wall</th><td>52798.84</td></tr><tr><th>rps</th><td>2.42</td></tr><tr><th>tps</th><td>15515.49</td></tr><tr><th>ttft_p50</th><td>13078.73</td></tr><tr><th>ttft_p95</th><td>13176.19</td></tr><tr><th>ttft_p99</th><td>13179.19</td></tr><tr><th>dur_p50</th><td>13104.37</td></tr><tr><th>dur_p95</th><td>13196.71</td></tr><tr><th>dur_p99</th><td>13199.88</td></tr>
   </tbody></table>
