--- a/bench-fastapi.html
+++ b/bench-fastapi.html
@@ -2,5 +2,5 @@
   <style>body{font:14px system-ui,Segoe UI,Arial} table{border-collapse:collapse} td,th{border:1px solid #ddd;padding:6px}</style>
   <h2>Bench Report</h2>
   <table><tbody>
-  <tr><th>mode</th><td>sweep</td></tr><tr><th>baseURL</th><td>http://localhost:8082</td></tr><tr><th>path</th><td>/api/chat/completions</td></tr><tr><th>total</th><td>64.00</td></tr><tr><th>concurrency</th><td>8.00</td></tr><tr><th>wall</th><td>25047.05</td></tr><tr><th>rps</th><td>2.56</td></tr><tr><th>tps</th><td>16353.22</td></tr><tr><th>ttft_p50</th><td>2.05</td></tr><tr><th>ttft_p95</th><td>43.65</td></tr><tr><th>dur_p50</th><td>3115.81</td></tr><tr><th>dur_p95</th><td>3185.27</td></tr>
+  <tr><th>mode</th><td>sweep</td></tr><tr><th>baseURL</th><td>http://localhost:8082</td></tr><tr><th>path</th><td>/api/chat/completions</td></tr><tr><th>total</th><td>128.00</td></tr><tr><th>concurrency</th><td>32.00</td></tr><tr><th>wall</th><td>55092.72</td></tr><tr><th>rps</th><td>2.32</td></tr><tr><th>tps</th><td>14869.48</td></tr><tr><th>ttft_p50</th><td>13662.88</td></tr><tr><th>ttft_p95</th><td>13825.36</td></tr><tr><th>ttft_p99</th><td>13826.98</td></tr><tr><th>dur_p50</th><td>13677.12</td></tr><tr><th>dur_p95</th><td>13833.30</td></tr><tr><th>dur_p99</th><td>13835.26</td></tr>
   </tbody></table>
