--- a/bench-express.512x2048.html
+++ b/bench-express.512x2048.html
@@ -2,5 +2,5 @@
   <style>body{font:14px system-ui,Segoe UI,Arial} table{border-collapse:collapse} td,th{border:1px solid #ddd;padding:6px}</style>
   <h2>Bench Report</h2>
   <table><tbody>
-  <tr><th>mode</th><td>sweep</td></tr><tr><th>baseURL</th><td>http://localhost:8081</td></tr><tr><th>path</th><td>/api/chat/completions</td></tr><tr><th>total</th><td>2048.00</td></tr><tr><th>concurrency</th><td>512.00</td></tr><tr><th>wall</th><td>13118.72</td></tr><tr><th>rps</th><td>156.11</td></tr><tr><th>tps</th><td>999122.12</td></tr><tr><th>ttft_p50</th><td>2855.01</td></tr><tr><th>ttft_p95</th><td>3737.89</td></tr><tr><th>ttft_p99</th><td>3756.26</td></tr><tr><th>dur_p50</th><td>2890.94</td></tr><tr><th>dur_p95</th><td>3930.15</td></tr><tr><th>dur_p99</th><td>3947.31</td></tr>
+  <tr><th>mode</th><td>sweep</td></tr><tr><th>baseURL</th><td>http://localhost:8081</td></tr><tr><th>path</th><td>/api/chat/completions</td></tr><tr><th>total</th><td>2048.00</td></tr><tr><th>concurrency</th><td>512.00</td></tr><tr><th>wall</th><td>10032.94</td></tr><tr><th>rps</th><td>204.13</td></tr><tr><th>tps</th><td>1306416.51</td></tr><tr><th>ttft_p50</th><td>1390.82</td></tr><tr><th>ttft_p95</th><td>4011.08</td></tr><tr><th>ttft_p99</th><td>4136.33</td></tr><tr><th>dur_p50</th><td>1418.61</td></tr><tr><th>dur_p95</th><td>4242.11</td></tr><tr><th>dur_p99</th><td>4338.97</td></tr>
   </tbody></table>
